# test-simplecalc

./: CMakeLists.txt  build.sh  simplecalc
include/: addition.h  check_arguments.h
include/my_lib/: CMakeLists.txt  check_arguments.c
src/: CMakeLists.txt  addition.c  check_arguments.c  main.c  simplecalc  simplecalc.c
